src/objects/PBS_AB_Code__c.object
<CustomObject>
    <description>PBS A/B Codes Object</description>
    <fields>
        <fullName>AB_Code__c</fullName>
        <description>This field is the 4-digit code that uniquely identifies the agency bureau for which the exception, exemption, administrative, or agency (including trust fund agency) adjustment was created.</description>
        <externalId>true</externalId>
        <label>AB Code</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Agency_Bureau_Name__c</fullName>
        <description>The full name of the agency or bureau.</description>
        <label>Agency Bureau Name</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_Bureau_Short_Name__c</fullName>
        <description>The 20-character agency bureau short name.</description>
        <label>Agency Bureau Short Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_Code__c</fullName>
        <description>The first 2-digits of the A/B Code identifies the client agency.</description>
        <label>Agency Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bureau_Code__c</fullName>
        <description>The first 3 and fourth digits of the A/B Code identifies the client agency.</description>
        <label>Bureau Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Created_By__c</fullName>
        <description>The User ID who first added the record to the database. This field is system generated and cannot be updated on-line.</description>
        <label>Source Created By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Created_Ts__c</fullName>
        <description>The date the record was first added to the database. This field is system generated and cannot be updated on-line.</description>
        <label>Source Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Source_Updated_By__c</fullName>
        <description>The user id or ticket number that inserted or last updated the record.</description>
        <label>Source Updated By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Updated_Ts__c</fullName>
        <description>The date and time the record was last updated or created.</description>
        <label>Source Updated Ts</label>
        <type>DateTime</type>
    </fields>
    <label>PBS AB Code</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PBSABCode-{0000000000}</displayFormat>
        <label>PBS AB Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PBS AB Codes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>